@@ -1,3 +1,5 @@
+- Refactor: Upgrade dependency of fenixedu-academic-core (remove usage of deprecated shift types) 
+
 6.20.4 (27-10-2020)
 - Refactor: Remove usage of deprecated shift types
 
